<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:padding="@dimen/default_margin">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewTitle"
        android:textAppearance="?textAppearanceHeadline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_new_network" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin">

        <ImageView
            android:id="@+id/buttonCurrentSSID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/small_margin"
            android:src="@drawable/outline_wifi_24"
            app:tint="@color/accent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputSSID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_toStartOf="@id/buttonCurrentSSID"
            android:hint="@string/enter_ssid">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSSID"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:hint="@string/enter_ssid_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDescription"
            style="@style/EditTextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAdd"
        style="@style/ButtonDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/save" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCancel"
        style="@style/ButtonTransparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/cancel" />

</LinearLayout>